Clean up and optimize ECMA48 class with Java 21 features
Co-authored-by: crramirez <8397379+crramirez@users.noreply.github.com>